--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -4,6 +4,7 @@
   width: 320px;
   height: 200px;
   margin: 0 auto;
+  margin-top: 35px;
 
   @media (min-width: @tablet-width) {
     background-image: url("../img/bg-map-tablet@1x.jpg");
