--- a/source/less/blocks/send.less
+++ b/source/less/blocks/send.less
@@ -7,6 +7,7 @@
   @media (min-width: @tablet-width) {
     margin-top: 41px;
     padding-top: 58px;
+    padding-right: 33px;
   }
 
   @media (min-width: @desktop-width) {
@@ -166,10 +167,44 @@
 
   &--contrast {
     top: 5px;
+
+    @media (min-width: @tablet-width) {
+      width: 18px;
+      top: -17px;
+      left: 4px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: auto;
+      top: 5px;
+    }
+  }
+
+  &--fill {
+    @media (min-width: @tablet-width) {
+      width: 26px;
+      top: -20px;
+      left: 0;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: auto;
+      top: 0;
+    }
   }
 
   &--crop {
     top: -3px;
+
+    @media (min-width: @tablet-width) {
+      width: 25px;
+      top: -24px;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: auto;
+      top: 0;
+    }
   }
 }
 
@@ -228,6 +263,11 @@
 
 .send__item .send__path {
   opacity: 0.3;
+
+  @media (min-width: @tablet-width) {
+    opacity: 1;
+    fill: @basic-red;
+  }
 }
 
 .send__item--active .send__path {
@@ -249,5 +289,35 @@
 
   @media (min-width: @tablet-width) {
     padding-right: 0;
+  }
+}
+
+.send__item--crop .send__toggle {
+  @media (min-width: @tablet-width) {
+    left: 150px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 68px;
+  }
+}
+
+.send__item--fill .send__toggle {
+  @media (min-width: @tablet-width) {
+    left: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 246px;
+  }
+}
+
+.send__item--contrast .send__toggle {
+  @media (min-width: @tablet-width) {
+    left: 101px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 159px;
   }
 }
