--- a/source/less/blocks/communication.less
+++ b/source/less/blocks/communication.less
@@ -1,5 +1,5 @@
 .communication {
-  padding-top: 50px;
+  padding-top: 43px;
 
   @media (min-width: @tablet-width) {
     padding-top: 45px;
@@ -48,29 +48,27 @@
 .communication__title {
   display: block;
   margin: 0;
-  margin-top: 31px;
   padding: 0;
   font-weight: bold;
   font-size: 18px;
   line-height: 25px;
   text-align: center;
   color: @basic-grey;
-
-  @media (min-width: @tablet-width) {
-    margin: 0;
-  }
 }
 
 .communication__link {
   display: block;
   margin: 0;
-  margin-top: 4px;
   padding: 0;
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
   text-align: center;
   color: @basic-red;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 4px;
+  }
 
   @media (min-width: @desktop-width) {
     margin-top: 21px;
@@ -80,13 +78,16 @@
 .communication__paragraph {
   display: block;
   margin: 0;
-  margin-top: 4px;
   padding: 0;
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
   text-align: center;
   color: @basic-red;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 4px;
+  }
 
   @media (min-width: @desktop-width) {
     margin-top: 21px;
@@ -109,6 +110,7 @@
   width: 241px;
   list-style: none;
   margin: 0 auto;
+  margin-top: 32px;
   padding: 0;
 
   @media (min-width: @tablet-width) {
@@ -128,7 +130,10 @@
 }
 
 .communication__item {
+  margin-top: 19px;
+
   @media (min-width: @tablet-width) {
+    margin-top: 0;
     width: 241px;
   }
 
