--- a/source/less/blocks/form-application.less
+++ b/source/less/blocks/form-application.less
@@ -103,3 +103,12 @@
     left: 0;
   }
 }
+
+.form-application__input:hover + .form-application__radio-icon,
+.form-application__input:focus + .form-application__radio-icon {
+  border: 2px solid @black;
+}
+
+.form-application__input:active + .form-application__radio-icon {
+  border: 2px solid @basic-red;
+}
