--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -37,6 +37,17 @@
       height: 300px;
     }
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -18px;
+    background: url("../img/icon-map-marker.svg") no-repeat center center;
+    width: 36px;
+    height: 36px;
+  }
 }
 
 .map__iframe {
