--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -95,3 +95,12 @@
     top: 28px;
   }
 }
+
+.slider__button:hover,
+.slider__button:focus {
+  opacity: 1;
+}
+
+.slider__button:active {
+  opacity: 0.1;
+}
