--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -96,6 +96,15 @@
   padding-bottom: 14px;
 }
 
+.modal__button:hover,
+.modal__button:focus {
+  background: #1c9b5e;
+}
+
+.modal__button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .modal--send .modal__background {
   background: @basic-lightgrey;
   padding: 49px 20px 54px 20px;
