--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -47,6 +47,14 @@
     background: url("../img/icon-map-marker.svg") no-repeat center center;
     width: 36px;
     height: 36px;
+
+    @media (min-width: @tablet-width) {
+      margin-top: 10px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-top: 11px;
+    }
   }
 }
 
