--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -24,7 +24,7 @@
     background-color: @basic-darkgrey;
     background-image: url("../img/iphone-hand-desktop@1x.png"),
       url("../img/bg-back-desktop@1x.jpg");
-    background-position: right bottom, center 0;
+    background-position: 25px bottom, center 0;
     background-repeat: no-repeat, no-repeat;
     min-height: 853px;
   }
@@ -128,7 +128,7 @@
 
   @media (min-width: @desktop-width) {
     top: 208px;
-    left: 130px;
+    left: 10px;
   }
 }
 
