--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -4,6 +4,7 @@
     url("../fonts/opensans.woff") format("woff");
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     url("../fonts/opensansbold.woff") format("woff");
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
@@ -20,4 +22,5 @@
     url("../fonts/opensanslight.woff") format("woff");
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
 }
