--- a/source/less/blocks/send.less
+++ b/source/less/blocks/send.less
@@ -257,6 +257,7 @@
   border: 2px solid @basic-red;
   border-radius: 50%;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .send__toggle:active {
